fix sr params